# voxl-vxasm

./: .gitignore  Cargo.toml  README.md  sample.vsm
benches/: benches.rs  lexer_benches.rs  parser_benches.rs
example_vsm/: ld.vsm  out.xvl  power.vsm
src/: assembler.rs  error.rs  instruction_parser.rs  lexer.rs  lib.rs  main.rs  parser.rs  pre_processor.rs  text_mapping.rs  token.rs
src/processing/: assembler.rs  lexer.rs  mod.rs  parser.rs  pre_processor.rs  pre_processor_string.rs
src/vxlasm-bin/: cli_args.rs  main.rs
tests/: lexer_tests.rs  parser_tests.rs
