[package]
name = "vxasm"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"

[dependencies]
voxl-instruction-set = { git = "https://github.com/Voxeon/voxl-instruction-set", branch = "main" }
fast-float = { version = "0.2", default-features = false}
hashbrown = "0.11"
paste = "1.0"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"

[[bench]]
name = "lexer_benches"
harness = false