[package]
name = "vxlasm"
version = "0.1.0"
authors = ["aidos9 <20310468+aidos9@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "vxlasm"
path = "src/lib.rs"

[[bin]]
name = "vxlasm"
path = "src/main.rs"
required-features = ["with-binary"]

[features]
default = ["with-binary"]
with-binary = ["clap"]

[dependencies]
vxl-iset = { git = "https://github.com/Voxeon/vxl-iset", branch = "main" }
fast-float = { version = "0.2", default-features = false}
hashbrown = "0.11"
paste = "1.0"
sha2 = { version = "0.9", features = [] }
sha3 = { version = "0.9", features = [] }
digest = { version = "0.9", features = [] }
clap = { version = "2.33", optional = true }

[dev-dependencies]
criterion = "0.3"
hex = "0.4"

[[bench]]
name = "benches"
harness = false